--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "@babel/react"
   ],
   "plugins": [
-    [ "@babel/plugin-syntax-dynamic-import" ]
+    [ "@babel/plugin-syntax-dynamic-import" ],
+    ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }]
   ]
 }
