--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "aludlow",
   "license": "ISC",
   "dependencies": {
+    "antd": "^3.25.3",
     "path": "^0.12.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -23,6 +24,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.6.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
